CSS interno.html

--- a/CSS interno.html
+++ b/CSS interno.html
@@ -33,7 +33,7 @@
         }
         .divE {
             width: 100vh;
-            height: 60%;
+            height: 60vh;
             background-color:rgb(73, 66, 71);
         }
 
